fix box overflow

--- a/src/styles/pokemon/Pc.css
+++ b/src/styles/pokemon/Pc.css
@@ -13,10 +13,15 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 0 0 1rem;
+  flex: 1 1 0;
 }
 
-.PokemonPc__boxes > div {
+.PokemonPc__boxes {
+  overflow: scroll;
+  height: 100%
+}
+
+.PokemonPc__boxes > div > div {
   display: flex;
 }
 
